# qenba

./: .gitignore  CMakeLists.txt  README.md  setup.iss
config/: add-app.html  home.html  settings.html
src/: main.cpp
src/app/: AppController.cpp  AppController.h  ConfigManager.cpp  ConfigManager.h
src/browser/: WebTrack.cpp  WebTrack.h  test.cpp
src/platform/: Platform.cpp  Platform.h
src/platform/windows/: WindowsAppBarManager.cpp  WindowsAppBarManager.h  qenba.rc.in
src/ui/: SidePanel.slint  Sidebar.slint  UIManager.cpp  UIManager.h  app.slint
src/utils/: FaviconUtils.cpp  FaviconUtils.h  Platform.cpp  Platform.h
src/window/: WindowContext.cpp  WindowContext.h
